<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:text="@string/mainTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btMainExActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btExAct" />

    <Button
        android:id="@+id/btMainExFragments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btExFrag" />

</LinearLayout>